UI: Fix trophy size, alignment, and date position for mobile screens

--- a/styles.css
+++ b/styles.css
@@ -323,4 +323,21 @@ header .credits a:hover {
         /* Shift bracket down on portrait mobile screens to avoid overlap */
         top: 55%;
     }
+    .trophy-container {
+        top: 55%;
+    }
+    .trophy-icon {
+        width: 55px;
+    }
+    .final-date {
+        top: 75px;
+        font-size: 8px;
+    }
+    .trophy-container.decided .trophy-icon {
+        transform: translate(-50%, calc(-50% - 50px)) scale(1.3);
+    }
+    .winner-name {
+        top: 25px;
+        font-size: 1rem;
+    }
 }
